// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GitHubIcon /> expect to render component 1`] = `
<BaseIcon
  icon={
    Array [
      "fab",
      "github",
    ]
  }
  name="GitHub"
  url="https://github.com/naamancurtis"
/>
`;

exports[`<LinkedInIcon /> expect to render component 1`] = `
<BaseIcon
  icon={
    Array [
      "fab",
      "linkedin",
    ]
  }
  name="LinkedIn"
  url="https://www.linkedin.com/in/naamancurtis/"
/>
`;

exports[`<MailIcon /> expect to render component 1`] = `
<styled.div
  className="clickable"
  onClick={[Function]}
>
  <styled.a
    aria-label="Open Contact Me Modal"
    className="clickable"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className="clickable"
      fixedWidth={false}
      flip={null}
      icon={
        Array [
          "fas",
          "envelope",
        ]
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </styled.a>
</styled.div>
`;
